--- a/_config/config.yml
+++ b/_config/config.yml
@@ -1,8 +1,7 @@
 ---
 Name: security-headers
 After:
-  - 'framework/*'
-  - 'cms/*'
+  - coreconfig
 ---
 Guttmann\SilverStripe\SecurityHeaderControllerExtension:
   headers:
